<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="VAVL" Id="{d63a2b59-09f6-454b-a9e8-83f928375720}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	axis: AXIS_REF;
	axisPower: MC_Power;
	axisMoveAbsolute: MC_MoveAbsolute;
	axisErrorReset: MC_Reset;
	axisReadActualPosition: MC_ReadActualPosition;
	axisMoveManual: MC_Jog;
	axisHome: MC_Home;
	
	enable: BOOL := FALSE;
	override: LREAL := 100;
	enableMove: BOOL := FALSE;
	targetPosition: LREAL := 0;
	targetVelocity: LREAL := 200;
	actualPosition: LREAL;
	actualPositionInt: INT;
	motorDriveSubmodeSelect AT%Q*:UDINT := 68;
	
	execute: BOOL := FALSE;
	ascend: BOOL := FALSE;
	descend: BOOL := FALSE;
	busy: BOOL := FALSE;
	running: BOOL := FALSE;
	done: BOOL := FALSE;
	resetError: BOOL := FALSE;
	currentError: UDINT;
	currentErrorPower: UDINT;
	currentErrorCommand: UDINT;
	
	homePosition: LREAL := 0;	

	endStopTop AT %I*: BOOL;
	endStopBottom AT %I*: BOOL;
	brake AT %Q*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>