<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="Manual" Id="{880819fa-648e-4916-b2f4-018c51c85792}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Manual
VAR
	running: BOOL;
	currentError: UDINT;
	manualMode: E_JogMode;
	velocity: LREAL;
	acceleration: LREAL;
	deceleration: LREAL;
	jerk: LREAL;
	done: BOOL;
	busy: BOOL;
	reset: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[HAVL.axis.ReadStatus();


HAVL.axisPower(
	Axis:= HAVL.axis,
	Enable:= HAVL.enable,
	Enable_Positive:= HAVL.enable,
	Enable_Negative:= HAVL.enable,
	Override:= HAVL.override,
	BufferMode:= ,
	Options:= ,
	Status=> HAVL.running,
	Busy=> ,
	Active=> ,
	Error=> ,
	ErrorID=> currentError
);

HAVL.axisMoveManual(
	Axis:= HAVL.axis,
	JogForward:= HAVL.forward,
	JogBackwards:= HAVL.backwards,
	Mode:= ,
	Position:= ,
	Velocity:= ,
	Acceleration:= ,
	Deceleration:= ,
	Jerk:= ,
	Done=> HAVL.done,
	Busy=> HAVL.busy,
	Active=> ,
	CommandAborted=> ,
	Error=> ,
	ErrorID=> );
	
IF HAVL.busy THEN
	HAVL.axisReadActualPosition(Axis := HAVL.axis, Enable := TRUE, Valid=>, Busy=>, Error=>, ErrorID=>, Position=> HAVL.actualPosition);
END_IF
HAVL.actualPositionInt := LREAL_TO_INT(HAVL.actualPosition);

HAVL.axisErrorReset(Axis := HAVL.axis, Execute := HAVL.resetError, Done =>, Error =>, ErrorID => currentError);]]></ST>
    </Implementation>
    <LineIds Name="Manual">
      <LineId Id="21" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="22" Count="13" />
      <LineId Id="5" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="2" />
      <LineId Id="66" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="96" Count="3" />
      <LineId Id="67" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>