<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="Manual_1" Id="{e5fa7945-e802-46a9-800f-6db9cf40bcd4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Manual_1
VAR
	running: BOOL;
	currentError: UDINT;
	manualMode: E_JogMode;
	velocity: LREAL;
	acceleration: LREAL;
	deceleration: LREAL;
	jerk: LREAL;
	done: BOOL;
	busy: BOOL;
	reset: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[RAVL.axis.ReadStatus();


RAVL.axisPower(
	Axis:= RAVL.axis,
	Enable:= RAVL.enable,
	Enable_Positive:= RAVL.enable,
	Enable_Negative:= RAVL.enable,
	Override:= RAVL.override,
	BufferMode:= ,
	Options:= ,
	Status=> RAVL.running,
	Busy=> ,
	Active=> ,
	Error=> ,
	ErrorID=> currentError
);

RAVL.axisMoveManual(
	Axis:= RAVL.axis,
	JogForward:= RAVL.forward,
	JogBackwards:= RAVL.backwards,
	Mode:= ,
	Position:= ,
	Velocity:= ,
	Acceleration:= ,
	Deceleration:= ,
	Jerk:= ,
	Done=> RAVL.done,
	Busy=> RAVL.busy,
	Active=> ,
	CommandAborted=> ,
	Error=> ,
	ErrorID=> );

IF RAVL.busy THEN
	RAVL.axisReadActualPosition(Axis := RAVL.axis, Enable := TRUE, Valid=>, Busy=>, Error=>, ErrorID=>, Position=> RAVL.actualPosition);
END_IF
RAVL.actualPositionInt := LREAL_TO_INT(RAVL.actualPosition);

RAVL.axisErrorReset(Axis := RAVL.axis, Execute := RAVL.resetError, Done =>, Error =>, ErrorID => currentError);]]></ST>
    </Implementation>
    <LineIds Name="Manual_1">
      <LineId Id="21" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="22" Count="13" />
      <LineId Id="5" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="2" />
      <LineId Id="68" Count="1" />
      <LineId Id="96" Count="3" />
      <LineId Id="67" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>